--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
                 crossorigin="">
         </script>
 
-        <!-- <script src="main.js"></script> -->
-        <script src="emplacement_entreprises.js"></script>
-        <!-- <script src="relations_entreprises.js"></script> -->
+        <!-- <script src="../main.js"s></script> -->
+        <!-- <script src="emplacement_entreprises.js"></script> -->
+        <script src="relations_entreprises.js"></script>
     </body>
 </html>
