use deno api to retrieve geojson

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
         <!-- <script src="../main.js"s></script> -->
         <!-- <script src="emplacement_entreprises.js"></script> -->
-        <script src="relations_entreprises.js"></script>
+        <!-- <script src="relations_entreprises.js"></script> -->
+        <script src="relations_entreprises_2.js"></script>
     </body>
 </html>
